--- a/roadSignsDetector/roadSignsDetector.vcxproj.filters
+++ b/roadSignsDetector/roadSignsDetector.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="SignMatcher.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CircleFromTriangleCalculator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CircleFromTriangleCalculator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
